# bus_tracker_porto

./: .env.example.env  README.md  STCP-Real-Time.ipynb  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/gtfs/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stops.txt  trips.txt
backend/gtfs/archive/: shapes.txt
backend/gtfs/archive/up to 20260403/: calendar.txt  calendar_dates.txt
backend/gtfs/archive/up to 20260411/: calendar_dates.txt  feed_info.txt  stops.txt
backend/gtfs/archive/up to 20260413/: calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stops.txt  trips.txt
backend/gtfs/archive/up to 20260419/: calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stops.txt  trips.txt
backend/gtfs/override/: calendar_dates.txt  routes.txt
backend/src/app/: config.py  main.py
backend/src/app/api/: history.py  routes.py  schedules.py  shapes.py  stats.py  stops.py  stoptimes_planned.py  trips.py  vehicles.py
backend/src/app/db/: queries.py  session.py
backend/src/app/models/: vehicles.py
backend/src/app/services/: match_stop.py  stats.py  vehicles.py
backend/src/worker/: gtfs_ingest.py  gtfs_update.py  ingest.py  parse.py  testquery.sql  testquery_stopmatch.sql
database/: README.md
database/migrations/: 001_init.sql  002_indexes.sql  003_fleetnr_cleanup.sql  004_duplicate_cleanup.sql
docs/: api.md  architecture.md
frontend/: Dockerfile  index.html  package-lock.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
(+9 files in other folders)
